# ml_django

./: pyproject.toml  render.yaml
base/: views.py
base/pickle_models/: fraud_detect.sav  scaler.sav
base/templates/: index.html  result.html
ml_django/: settings.py  urls.py
